// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render An error should be logged if no size given 1`] = `
<Component>
  <Image
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "borderRadius": NaN,
        "height": undefined,
        "overflow": "hidden",
        "width": undefined,
      }
    }
  />
</Component>
`;

exports[`Render Avatar should render with given source and size 1`] = `
<Component>
  <Image
    source={
      Object {
        "headers": Object {
          "Authorization": undefined,
        },
        "uri": "https://www.planetminecraft.com/files/resource_media/screenshot/1231/Megaman8bit_3126288_thumb.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 15,
        "height": 30,
        "overflow": "hidden",
        "width": 30,
      }
    }
  />
</Component>
`;

exports[`Render Avatar should render without crashing 1`] = `
<Component>
  <Image
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "borderRadius": 15,
        "height": 30,
        "overflow": "hidden",
        "width": 30,
      }
    }
  />
</Component>
`;
